--- a/k8s/pvc.yaml
+++ b/k8s/pvc.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: garden-pvc
+  namespace: garden
 spec:
   accessModes:
     - ReadWriteOnce
