--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -3,9 +3,11 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: garden-ingress
+  namespace: garden
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /garden
 spec:
+  ingressClassName: nginx
   rules:
     - host: garden.local
       http:
