--- a/monitoring/values-loki.yaml
+++ b/monitoring/values-loki.yaml
@@ -1,32 +1,107 @@
+# Loki in einfachem Modus
+deploymentMode: SingleBinary
+
+# Explicitly disable all scalable components
+read:
+  replicas: 0
+write:
+  replicas: 0
+backend:
+  replicas: 0
+
+# Disable caching components for SingleBinary mode
+memcached:
+  enabled: false
+memcachedChunks:
+  enabled: false
+memcachedFrontend:
+  enabled: false
+memcachedIndexQueries:
+  enabled: false
+memcachedIndexWrites:
+  enabled: false
+
+# Disable other scalable components
+ingester:
+  replicas: 0
+distributor:
+  replicas: 0
+querier:
+  replicas: 0
+queryFrontend:
+  replicas: 0
+queryScheduler:
+  replicas: 0
+ruler:
+  replicas: 0
+indexGateway:
+  replicas: 0
+compactor:
+  replicas: 0
+
 loki:
-  enabled: true
+  auth_enabled: false
+  commonConfig:
+    replication_factor: 1
+  storage:
+    type: 'filesystem'
+    filesystem:
+      chunks_directory: /var/loki/chunks
+      rules_directory: /var/loki/rules
+
+  schemaConfig:
+    configs:
+      - from: 2020-10-24
+        store: tsdb
+        object_store: filesystem
+        schema: v13
+        index:
+          prefix: index_
+          period: 24h
+
+  limits_config:
+    reject_old_samples: true
+    reject_old_samples_max_age: 168h
+    max_cache_freshness_per_query: 10m
+    split_queries_by_interval: 15m
+    ingestion_rate_mb: 8
+    ingestion_burst_size_mb: 16
+    per_stream_rate_limit: 3MB
+    per_stream_rate_limit_burst: 15MB
+
+# Einzelner Pod für Entwicklung
+singleBinary:
+  replicas: 1
   persistence:
-    enabled: false
-  config:
-    table_manager:
-      retention_deletes_enabled: true
-    schema_config:
-      configs:
-        - from: 2020-10-15
-          store: boltdb-shipper
-          object_store: filesystem
-          schema: v11
-          index:
-            prefix: index_
-            period: 24h
-    storage_config:
-      boltdb_shipper:
-        active_index_directory: /data/loki/index
-        shared_store: filesystem
-      filesystem:
-        directory: /data/loki/chunks
-promtail:
+    enabled: true
+    size: 5Gi
+  resources:
+    requests:
+      cpu: 100m
+      memory: 128Mi
+    limits:
+      cpu: 200m
+      memory: 256Mi
+
+# Gateway für einheitlichen Zugriff
+gateway:
   enabled: true
-  extraScrapeConfigs: |
-    - job_name: garden-app-logs
-      kubernetes_sd_configs:
-        - role: pod
-      relabel_configs:
-        - source_labels: [__meta_kubernetes_pod_label_app]
-          action: keep
-          regex: garden
+  replicas: 1
+  resources:
+    requests:
+      cpu: 50m
+      memory: 64Mi
+    limits:
+      cpu: 100m
+      memory: 128Mi
+
+# Monitoring
+monitoring:
+  serviceMonitor:
+    enabled: true
+    labels:
+      release: prometheus
+
+# Tests deaktivieren
+test:
+  enabled: false
