--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,14 +38,12 @@ quarkus.micrometer.export.prometheus.path=/q/metrics
 quarkus.micrometer.binder.http-server.enabled=true
 quarkus.micrometer.binder.http-client.enabled=true
 
-# H2 in-memory database
-quarkus.datasource.db-kind=h2
-quarkus.datasource.jdbc.url=jdbc:h2:mem:default;DB_CLOSE_DELAY=-1
-quarkus.datasource.username=sa
-quarkus.datasource.password=
+# application.properties (Devmodus, kein Prod-Config notwendig)
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=demo
+quarkus.datasource.password=demo
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/demo
 quarkus.hibernate-orm.database.generation=update
 
-# deaktiviere Text-Logs?
 quarkus.log.console.enable=false
-# ?und aktiviere strukturierte JSON-Logs
 quarkus.log.console.json.enable=true
